@@ -68,6 +68,7 @@ Mejorado ZX Vision:
 - Permitir a una ventana desactivar acciones de scroll
 - El Process switcher se ubica en la parte izquierda-abajo de la pantalla por defecto
 - Ahora las barras de arcoiris en el título de ventanas son visibles en todos los estilos de GUI cuando aparece un error o un mensaje de splash
+- Añadida función directa para abrir ventana de Breakpoints
 
 Mejorado ZX Desktop:
 - Permitir activar/desactivar botones superiores e inferiores de manera independiente
