@@ -35,6 +35,8 @@ extern void menu_watches(MENU_ITEM_PARAMETERS);
 extern void menu_debug_registers_run_cpu_opcode(void);
 extern void menu_debug_textadventure_map_connections(MENU_ITEM_PARAMETERS);
 
+extern void menu_breakpoints(MENU_ITEM_PARAMETERS);
+
 extern int menu_debug_textadventure_map_connections_show_rooms_no_connections;
 extern int menu_debug_textadventure_map_connections_center_current;
 extern int menu_debug_textadventure_map_connections_show_unvisited;
